<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">求是潮手机站</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_text">你好:) 我是 MOBILE</string>
    <string name="login_uid">输入学号</string>
    <string name="login_pwd">输入教务网密码</string>
    <string name="login_btn">登录</string>
    <string name="copyright_text1">Copyright 2000-2013 浙江大学求是潮工作团队</string>
    <string name="copyright_text2">All Rights Reversed</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_circle_blank">&#xf10c;</string>
    <string name="icon_ok_circle">&#xF05d;</string>
    <string name="icon_ok_sign">&#xf058;</string>
    <string name="icon_minus_sign">&#xF056;</string>
    <string name="icon_plus">&#xF067;</string>
    <string name="icon_chevron_right">&#xF054;</string>
    <string name="icon_chevron_left">&#xF053;</string>
    <string name="icon_lock">&#xf023;</string>
    <string name="icon_copy">&#xF0C5;</string>
    <string name="icon_file_alt">&#xF016;</string>
    <string name="icon_exchange">&#xF0EC;</string>
    <string name="icon_bar_chart">&#xF080;</string>
    <string name="icon_info">&#xF129;</string>
    <string name="icon_heart">&#xF004;</string>
    <string name="icon_group">&#xF0C0;</string>
    <string name="icon_calendar">&#xF073;</string>
    <string name="icon_list_alt">&#xF022;</string>
    <string name="icon_trophy">&#xF091;</string>
    <string name="icon_edit">&#xF044;</string>
    <string name="icon_star">&#xF005;</string>
    <string name="icon_star_empty">&#xF006;</string>
    <string name="icon_th">&#xF00A;</string>
    <string name="icon_th_list">&#xF00B;</string>
    <string name="icon_truck">&#xF0D1;</string>
    <string name="icon_code">&#xF121;</string>
    <string name="icon_signal">&#xF012;</string>
    <string name="icon_tint">&#xF043;</string>
    <string name="icon_fire">&#xF06D;</string>
    <string name="icon_search">&#xF002;</string>
    <string name="icon_share">&#xF045;</string>
    <string name="icon_globe">&#xF0AC;</string>
    <string name="fa_flag">&#xF024;</string>
    <string name="icon_arrow_circle_o_down">&#xf01a;</string>
    <string name="title_activity_curriculum">课表么么哒</string>

    <string name="timetable_appwidget_loading">正在努力加载…</string>
    <string name="timetable_appwidget_legacy_3x2_name">求是潮课程表 (3x2)</string>
    <string name="timetable_appwidget_legacy_3x3_name">求是潮课程表 (3x3)</string>
    <string name="timetable_appwidget_legacy_3x4_name">求是潮课程表 (3x4)</string>
    <string name="timetable_appwidget_legacy_4x4_name">求是潮课程表 (4x4)</string>
    <string name="timetable_appwidget_date_monday">周一</string>
    <string name="timetable_appwidget_date_tuesday">周二</string>
    <string name="timetable_appwidget_date_wednesday">周三</string>
    <string name="timetable_appwidget_date_thursday">周四</string>
    <string name="timetable_appwidget_date_friday">周五</string>
    <string name="timetable_appwidget_date_saturday">周六</string>
    <string name="timetable_appwidget_date_sunday">周日</string>
    <string name="timetable_appwidget_date_today">今天</string>
    <string name="timetable_appwidget_task_none">好的嘛，今天没有课~</string>

    <string name="legacy_notify_title">提示</string>
    <string name="legacy_notify_content">同学您好，\n\n　　您看到这条消息，是因为您的手机系统是 Android 4.0 以下版本。\n\n　　非常抱歉，我们即将停止对 Android 4.0 以下系统的手机站提供功能更新与维护，您使用的安卓版本将失去求是潮手机站的主流支持。\n\n　　但是，请不要担心，您可以继续使用手机站现有的各个功能，包括课表、考试、活动等在内的数据都将继续更新维护。\n\n　　我们不排除在未来对 Metro 版本以及这一版本停止数据更新支持的可能性。如果到了那个时候，我们将会尽力通过各种渠道告知每位同学。\n\n　　我们做出这一决定非常困难，但为了给更多用户提供更好的服务，我们不得不这么做，希望能够得到您的理解。\n\n　　感谢您对求是潮长期以来的支持。\n\n求是潮\n技术研发中心</string>
    <string name="legacy_notify_ok">知道了</string>
</resources>
