<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/login_frame"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             tools:context=".LoginActivity">

    <RelativeLayout
            android:id="@+id/login_acitivity_main_layout"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_height="65dp"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright_text1"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright_text2"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:context=".LoginActivity">

            <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_activity_vertical_margin"
                    android:lines="1"
                    android:text="@string/login_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#167Aff"
                    android:textSize="30sp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/login_activity_vertical_margin"
                    android:background="@drawable/login_frame"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >

                <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:id="@+id/login_icon_user"
                        android:layout_width="20dp"
                        android:layout_height="48dp"
                        android:text="@string/icon_user"/>

                <EditText
                        android:id="@+id/login_activity_uid"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/login_uid"
                        android:textColorHint="@color/gray_text"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:background="@null"
                        android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/login_frame"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >

                <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:id="@+id/login_icon_pwd"
                        android:layout_width="20dp"
                        android:layout_height="48dp"
                        android:text="@string/icon_lock"/>

                <EditText
                        android:id="@+id/login_activity_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/login_pwd"
                        android:textColorHint="@color/gray_text"
                        android:inputType="textPassword"
                        android:imeOptions="actionGo"
                        android:background="@null"
                        android:textSize="20sp"/>
            </LinearLayout>


            <Button
                    android:id="@+id/login_activity_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/gray_text"
                    android:text="登陆"
                    android:textColor="@color/white"/>

            <Button
                    android:id="@+id/login_activity_exit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/blue"
                    android:text="取消"
                    android:textColor="@color/white"/>

        </LinearLayout>
    </RelativeLayout>


</FrameLayout>

