<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:id="@+id/homework_activity_layout_left"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fa_flag"
                        android:textSize="20sp"
                        android:layout_marginBottom="7dp"
                        android:id="@+id/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="我的作业"
                        android:id="@+id/name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/homework_activity_layout_middle"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/icon_fire"
                        android:id="@+id/icon"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="全部作业"
                        android:id="@+id/name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/homework_activity_layout_right"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/icon_edit"
                        android:textSize="20sp"
                        android:id="@+id/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="添加作业"
                        android:id="@+id/name" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:animateLayoutChanges="true"
                android:id="@+id/homework_activity_linear"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
